
Sat Jan  1 18:53:02 PST 2000
(Mandrake)

Added in some callbacks for important stuff.  Going to add a sample player, as
well as saving data constructs shortly

---------------------------------------------------------------------------

Sat Jan  1 22:45:31 PST 2000
(Mandrake)

now we have an initialize function, as well as some functions to set the main
monitor window contents.

---------------------------------------------------------------------------

Sun Jan  2 01:05:38 PST 2000
(Mandrake)

adding threads support

---------------------------------------------------------------------------

Sun Jan  2 01:43:31 PST 2000
(Mandrake)

added glib 1.2.6 check
also upped gtk+ requirement to 1.2.6 (lets keep people current)

---------------------------------------------------------------------------

Sun Jan  2 22:35:59 PST 2000
(Mandrake)

fixed threads

---------------------------------------------------------------------------

Mon Jan  3 00:09:59 PST 2000
(Mandrake)

stubs for threaded loader.

---------------------------------------------------------------------------

Mon Jan  3 00:50:12 PST 2000
(Mandrake)

now it updates the progress bar safely.

---------------------------------------------------------------------------

Mon Jan  3 01:58:13 PST 2000
(Mandrake)

updates to preferences dialog for inputting memory consumption.

---------------------------------------------------------------------------

Tue Jan  4 13:44:21 PST 2000
(Mandrake)

fleshing out jpeg loader

---------------------------------------------------------------------------

Tue Jan  4 15:38:13 PST 2000
(Mandrake)

fixing a few things that need fixing.  moving all the loading code to the
appropriate places, also.

---------------------------------------------------------------------------

Tue Feb  1 12:03:14 PST 2000
(Mandrake)

putting this back in CVS.  most of the player for gdkrgb runs now.
you'll need gdkrgb and gdkpixbuf now though